@@ -1,3 +1,8 @@
+2004-09-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinWm.c (ActivateWindow): SetFocus to grab window when
+	clicking outside the grab window hierarchy. [Bug 220908]
+
 2004-09-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinWm.c: backport of several items from 8.5 head:
